WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
187299
Don't allow autoplay when the element is suspended
https://bugs.webkit.org/show_bug.cgi?id=187299
Summary
Don't allow autoplay when the element is suspended
Eric Carlson
Reported
2018-07-03 13:40:17 PDT
Don't allow autoplay when the element is suspended.
Attachments
Patch
(9.38 KB, patch)
2018-07-03 14:13 PDT
,
Eric Carlson
youennf
: review+
Details
Formatted Diff
Diff
Patch for landing
(9.32 KB, patch)
2018-07-03 14:33 PDT
,
Eric Carlson
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Eric Carlson
Comment 1
2018-07-03 13:41:47 PDT
<
rdar://problem/41044691
>
Eric Carlson
Comment 2
2018-07-03 14:13:53 PDT
Created
attachment 344214
[details]
Patch
EWS Watchlist
Comment 3
2018-07-03 14:15:18 PDT
Attachment 344214
[details]
did not pass style-queue: ERROR: Source/WebCore/html/HTMLMediaElement.cpp:286: Tests for true/false, null/non-null, and zero/non-zero should all be done without equality comparisons. [readability/comparison_to_zero] [5] ERROR: Source/WebCore/html/HTMLMediaElement.cpp:302: Tests for true/false, null/non-null, and zero/non-zero should all be done without equality comparisons. [readability/comparison_to_zero] [5] Total errors found: 2 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
Eric Carlson
Comment 4
2018-07-03 14:33:18 PDT
Created
attachment 344218
[details]
Patch for landing
EWS Watchlist
Comment 5
2018-07-03 14:34:32 PDT
Attachment 344218
[details]
did not pass style-queue: ERROR: Source/WebCore/html/HTMLMediaElement.cpp:286: Tests for true/false, null/non-null, and zero/non-zero should all be done without equality comparisons. [readability/comparison_to_zero] [5] ERROR: Source/WebCore/html/HTMLMediaElement.cpp:302: Tests for true/false, null/non-null, and zero/non-zero should all be done without equality comparisons. [readability/comparison_to_zero] [5] Total errors found: 2 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
WebKit Commit Bot
Comment 6
2018-07-03 15:57:22 PDT
Comment on
attachment 344218
[details]
Patch for landing Clearing flags on attachment: 344218 Committed
r233485
: <
https://trac.webkit.org/changeset/233485
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug